@@ -36,6 +36,8 @@ typedef struct cseDef
     iCode *diCode;		/* defining instruction */
     bitVect *ancestors;		/* keys of the symbol's ancestors */
     int fromGlobal:1;		/* defining symbol's value computed from a global */
+    int fromAddrTaken:1;	/* defining symbol's value computed from a */
+				/*   symbol whose address was taken */
   }
 cseDef;
 
